FWCO-50: add test to planned workers forecast