@@ -63,7 +63,8 @@ public class StaffingControllerTest {
 
   private static final String PLAN_URL = "/plan";
 
-  private static final List<String> AREA_PROCESSES = List.of(PICKING_PROCESS, INBOUND_AUDIT_PROCESS);
+  private static final List<String> AREA_PROCESSES =
+      List.of(PICKING_PROCESS, INBOUND_AUDIT_PROCESS);
 
   private static final int STAFFING_NET_PRODUCTIVITY = 34;
 
@@ -190,32 +191,51 @@ public class StaffingControllerTest {
   }
 
   private Staffing mockStaffing() {
-    final StaffingWorkflow mockedOutboundWorkflow = mockStaffingWorkflow(OUTBOUND_WORKFLOW,
-        List.of(mockProcess(PICKING_PROCESS), mockProcess(PACKING_PROCESS)));
-    final StaffingWorkflow mockedInboundWorkflow = mockStaffingWorkflow(INBOUND_WORKFLOW,
-        List.of(mockProcess(RECEIVING_PROCESS), mockProcess(CHECK_IN_PROCESS)));
-    final StaffingWorkflow mockedWithdrawalsWorkflow = mockStaffingWorkflow(WITHDRAWALS_WORKFLOW,
-        List.of(mockProcess(PICKING_PROCESS), mockProcess(PACKING_PROCESS)));
-    final StaffingWorkflow mockedStockWorkflow = mockStaffingWorkflow(STOCK_WORKFLOW,
-        List.of(mockProcess(STOCK_AUDIT_PROCESS), mockProcess(INBOUND_AUDIT_PROCESS)));
+    final StaffingWorkflow mockedOutboundWorkflow =
+        mockStaffingWorkflow(
+            OUTBOUND_WORKFLOW,
+            List.of(
+                mockProcess(PICKING_PROCESS, OUTBOUND_WORKFLOW),
+                mockProcess(PACKING_PROCESS, OUTBOUND_WORKFLOW)));
+
+    final StaffingWorkflow mockedInboundWorkflow =
+        mockStaffingWorkflow(
+            INBOUND_WORKFLOW,
+            List.of(
+                mockProcess(RECEIVING_PROCESS, INBOUND_WORKFLOW),
+                mockProcess(CHECK_IN_PROCESS, INBOUND_WORKFLOW)));
+    final StaffingWorkflow mockedWithdrawalsWorkflow =
+        mockStaffingWorkflow(
+            WITHDRAWALS_WORKFLOW,
+            List.of(
+                mockProcess(PICKING_PROCESS, WITHDRAWALS_WORKFLOW),
+                mockProcess(PACKING_PROCESS, WITHDRAWALS_WORKFLOW)));
+    final StaffingWorkflow mockedStockWorkflow =
+        mockStaffingWorkflow(
+            STOCK_WORKFLOW,
+            List.of(
+                mockProcess(STOCK_AUDIT_PROCESS, STOCK_WORKFLOW),
+                mockProcess(INBOUND_AUDIT_PROCESS, STOCK_WORKFLOW)));
     final StaffingWorkflow mockedTransferWorkflow =
-        mockStaffingWorkflow(TRANSFER_WORKFLOW, List.of(mockProcess(PICKING_PROCESS)));
+        mockStaffingWorkflow(
+            TRANSFER_WORKFLOW, List.of(mockProcess(PICKING_PROCESS, TRANSFER_WORKFLOW)));
 
     return Staffing.builder()
         .globalNetProductivity(STAFFING_NET_PRODUCTIVITY)
         .totalWorkers(STAFFING_TOTAL_WORKERS)
         .plannedWorkers(STAFFING_PLANNED_WORKERS)
-        .workflows(List.of(
-            mockedOutboundWorkflow,
-            mockedInboundWorkflow,
-            mockedWithdrawalsWorkflow,
-            mockedStockWorkflow,
-            mockedTransferWorkflow
-        ))
+        .workflows(
+            List.of(
+                mockedOutboundWorkflow,
+                mockedInboundWorkflow,
+                mockedWithdrawalsWorkflow,
+                mockedStockWorkflow,
+                mockedTransferWorkflow))
         .build();
   }
 
-  private StaffingWorkflow mockStaffingWorkflow(final String workflow, final List<Process> processes) {
+  private StaffingWorkflow mockStaffingWorkflow(
+      final String workflow, final List<Process> processes) {
     return StaffingWorkflow.builder()
         .workflow(workflow)
         .totalWorkers(WORKFLOW_TOTAL_WORKERS)
@@ -225,16 +245,29 @@ public class StaffingControllerTest {
         .build();
   }
 
-  private Process mockProcess(final String process) {
+  private Process mockProcess(final String process, final String workflow) {
+    Integer FORECAST_PLANNED_WORKERS = null;
+    if ((workflow.equals(INBOUND_WORKFLOW) || workflow.equals(OUTBOUND_WORKFLOW))
+        && (process.equals(CHECK_IN_PROCESS)
+            || process.equals(PICKING_PROCESS)
+            || process.equals(PACKING_PROCESS))) {
+      FORECAST_PLANNED_WORKERS = 15;
+    }
+
     return Process.builder()
         .process(process)
         .netProductivity(PROCESS_NET_PRODUCTIVITY)
-        .workers(new Worker(PROCESS_IDLE_WORKERS, PROCESS_BUSY_WORKERS))
+        .workers(new Worker(PROCESS_IDLE_WORKERS, PROCESS_BUSY_WORKERS, FORECAST_PLANNED_WORKERS))
         .targetProductivity(PROCESS_TARGET_PRODUCTIVITY)
         .throughput(PROCESS_THROUGHPUT)
-        .areas(AREA_PROCESSES.contains(process)
-            ? List.of(new Area(AREA_MZ1, AREA_NET_PRODUCTIVITY, new Worker(AREA_IDLE_WORKERS, AREA_BUSY_WORKERS)))
-            : Collections.emptyList())
+        .areas(
+            AREA_PROCESSES.contains(process)
+                ? List.of(
+                    new Area(
+                        AREA_MZ1,
+                        AREA_NET_PRODUCTIVITY,
+                        new Worker(AREA_IDLE_WORKERS, AREA_BUSY_WORKERS, null)))
+                : Collections.emptyList())
         .build();
   }
 
